--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
               <span>Teny Malagasy</span></a
             >
           </li>
+          <li>
+            <a href="index2.html"
+              ><span class="fas fa-tablet"></span>
+              <span>Mode Mobile</span></a
+            >
+          </li>
         </ul>
       </div>
     </div>
@@ -75,7 +81,7 @@
             <span class="fas fa-bars"></span>
           </label>
 
-          <span class="titre2"> <i class="fas fa-cube"></i> EducAtout</span>
+          <span class="titre2"> <i class="fas fa-cubes"></i> EducAtout</span>
         </h2>
 
         <div class="search_wrapper">
@@ -93,10 +99,6 @@
         </div>
       </header>
 
-      <div class="accueil">
-        <img src="accueil1.png" width="100%" />
-      </div>
-
       <!-- %%%%%%%%%%%%%%%%  MAIN %%%%%%%%%%%%%%%%% -->
 
       <main>
@@ -105,7 +107,7 @@
           <div class="projects">
             <div class="card">
               <div class="card_header">
-                <h3>Actualité</h3>
+                <h3>BIENVENUE <i class="fas fa-smile-wink"></i> </h3>
                 <button>New! <span class="fas fa-eye"></span></button>
               </div>
 
